Confirmation on delete done
Confirmation on delete

feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="hint_status">Pending OR Completed</string>
     <string name="saveStatus">Save Status</string>
     <string name="test">whatup</string>
+    <string name="sure_text">shai me delete?</string>
+    <string name="nahi">Nahi</string>
+    <string name="haa">Haa</string>
+    <string name="Update">Update</string>
 </resources>
